--- a/view/form.html
+++ b/view/form.html
@@ -9,24 +9,18 @@
                     </button>
                 </a>
                 <form>
-                    <div ng-repeat="fieldset in formData.field_group_designs track by $index" fs data="fieldset">
-
-                        <div class="item-stable item fs all-field-header" style="width:100%">
-                            <span>{{fieldset.name}}</span>
-                            <a id="a{{fieldset.$$hashKey}}" scroll ng-click="toggleGroup(fieldset, goto)" ng-class="{active: isGroupShown(group)}" style="float:right;width:50px;text-align:right">                                                            
-                                <span class="icon ion-chevron-down all-chevron"></span>                                                            
-                            </a>
-                            <a ng-click="repeatGroup(fieldset)" style="float:right;width:50px;text-align:right" ng-show="fieldset.repeatable">                                                            
-                                <span class="icon ion-plus all-chevron"></span>                                                            
-                            </a>
-                            <span class="all-field-description">{{fieldset.guidance}}</span>
+                    <div ng-repeat="fieldset in formData.field_group_designs track by $index" fs data="fieldset" style="position: relative;">
+                        <a ng-click="repeatGroup(fieldset)" class="help" ng-show="fieldset.repeatable">                                                            
+                            <span class="icon ion-plus all-chevron"></span>                                                            
+                        </a>
+                        <div id="a{{fieldset.$$hashKey}}" scroll ng-click="toggleGroup(fieldset, goto)" ng-class="{active: isGroupShown(group)}" class="item-stable item fs all-field-header" style="width:100%">                            
+                            <span style="margin-left:23px">{{fieldset.name}}</span>
+                            <span  style="float:right;width:50px;text-align:right" class="icon ion-chevron-down all-chevron"></span>                                                            
+                            <span class="all-field-description" style="margin-left:25px;">{{fieldset.guidance}}</span>
                         </div>
                         <div ng-repeat="field in fieldset.field_designs" style="position: relative" ng-show="isGroupShown(fieldset)">
-                            <!--                            <a ng-click="repeatField(fieldset, field)" style="float:right;width:50px;text-align:right">                                                            
-                                                            <span class="icon ion-plus all-chevron"></span>                                                            
-                                                        </a>-->
-                            <a class="all-field-repeat" ng-click="repeatField(fieldset, field)" ng-show="field.repeatable"><span class="icon ion-plus all-chevron"></span> </a>
-                            <field data="field"></field>
+                            <a class="all-field-repeat" ng-click="repeatField(fieldset, field)" ng-show="field.repeatable"><span class="icon ion-plus" style="color:#fff"></span> </a>
+                            <field style="width:50%" data="field"></field>
                         </div>
 
                     </div>
