--- a/view/form.html
+++ b/view/form.html
@@ -13,7 +13,7 @@
                         <a ng-click="repeatGroup(fieldset)" class="help" ng-show="fieldset.repeatable">                                                            
                             <span class="icon ion-plus all-chevron"></span>                                                            
                         </a>
-                        <div id="a{{fieldset.$$hashKey}}" scroll ng-click="toggleGroup(fieldset, goto)" ng-class="{active: isGroupShown(group)}" class="item-stable item fs all-field-header" style="width:100%">                            
+                        <div id="{{formData.id}}:{{$index}}" ng-click="toggleGroup(fieldset, formData.id + ':' + $index)" ng-class="{active: isGroupShown(group)}" class="item-stable item fs all-field-header" style="width:100%">                            
                             <span style="margin-left:23px">{{fieldset.name}}</span>
                             <span  style="float:right;width:50px;text-align:right" class="icon ion-chevron-down all-chevron"></span>                                                            
                             <span class="all-field-description" style="margin-left:25px;">{{fieldset.guidance}}</span>
