--- a/view/completed.html
+++ b/view/completed.html
@@ -28,10 +28,10 @@
         </div>
     </ion-content>
     <div class="tabs tabs-calm tabs-icon-only">
-        <a class="tab-item" href="#/app/category/{{projectId}}/{{categoryId}}">
+        <a class="tab-item" ui-sref="app.forms({projectId:projectId, categoryId:categoryId})">
             <i class="icon ion-ios-compose-outline"></i>
         </a>
-        <a class="tab-item" href="#/app/registers/{{projectId}}/{{categoryId}}">
+        <a class="tab-item" ui-sref="app.registers({projectId:projectId, categoryId:categoryId})">
             <i class="icon ion-ios-box-outline"></i>
         </a>
         <a class="tab-item">
