--- a/view/register.html
+++ b/view/register.html
@@ -2,7 +2,7 @@
     <ion-content>
         <div class="content" >
             <div  class="list">                       
-                <a class="item item-button-left test-item" href="#/app/registers/{{projectId}}/{{categoryId}}">
+                <a class="item item-button-left test-item" ui-sref="app.registers({projectId:projectId, categoryId:categoryId})">
                     Records: <span class="all-header-details">{{formName}}</span>
                     <button class="button button-clear  button-calm" >
                         <i class="icon ion-chevron-left"></i>
