--- a/view/form/_picture_modal.html
+++ b/view/form/_picture_modal.html
@@ -6,7 +6,7 @@
         <form>
             <div class="list">
                 <div class="item">
-                    <div class="img-box" style="width: 50vw; height: 50vw">
+                    <div class="img-box" style="width: 200px; height: 200px">
                         <img ng-show="item.base64String !== ''" ng-src="{{item.base64String}}">
                         <img ng-show="item.base64String === ''" ng-src="http://placehold.it/100x100">
                     </div>
