--- a/css/style.css
+++ b/css/style.css
@@ -419,3 +419,10 @@ textarea {
     color: #fff;
     border: none;
 }
+.testx{
+    width:100px;
+    min-width:100px;
+    height: 100px;
+    min-height: 100px;
+    background-color:red;
+}
