--- a/view/form.html
+++ b/view/form.html
@@ -63,13 +63,18 @@
                 <ion-item ng-show="isGroupShown(fieldset)" >
                     <div class="row">
                         <div class="col">
-                            <div class="img-box-container">
-                                <div class="img-box">
-                                    <button ng-click="delSpot(pic.id)">x</button>
-                                    <img ng-src="http://placehold.it/100x100">
-                                </div>
+                            <div class="testx">
+                                1
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="testx">
+                            2
+                        </div>
+                    </div>
+                    <div class="testx">
+                        3
                     </div>
                     <div class="row" ng-repeat="picrow in pictures">
                         <div class="col" ng-repeat="pic in picrow">
