--- a/view/completed.html
+++ b/view/completed.html
@@ -1,5 +1,5 @@
 <ion-view title="Test" class="all-view-bg" cache-view="false">
-    <ion-content >
+    <ion-content class="has-tabs">
         <div class="content">            
             <div  class="list">                       
                 <a class="item item-button-left test-item" href="#/app/categories/{{projectId}}">
