--- a/view/form.html
+++ b/view/form.html
@@ -67,7 +67,7 @@
                                 <div class="img-box" ng-click="test(pic)">
                                     <button ng-click="delSpot(pic.id)">x</button>
                                     <img ng-show="pic.base64String !== ''" ng-src="{{pic.base64String}}">
-                                    <img ng-show="pic.base64String === ''" ng-src="http://placehold.it/100x100">
+                                    <img ng-show="pic.base64String === ''" ng-src="img/ic.png">
                                 </div>
                             </div>
                         </div>
