--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,9 @@ textarea {
     min-height: 100px;
     background-color:red;
 }
+.fixDisplay{
+    padding-top:1.5em;
+}
 .fixDisplay .category-icon{
     font-size: 3.5em;
     padding: 0.3em;
