--- a/view/form/_picture_modal.html
+++ b/view/form/_picture_modal.html
@@ -7,7 +7,7 @@
             <div class="list">
                 <div class="item">
                     <div class="img-box" style="width: 200px; height: 200px">
-                        <img ng-show="item.base64String !== ''" data-ng-src ="data:image/png;base64,{{item.img}}">
+                        <img ng-show="item.base64String !== ''" data-ng-src ="data:image/png;base64,{{item.base64String}}">
                         <img ng-show="item.base64String === ''" ng-src="http://placehold.it/100x100">
                     </div>
                 </div>
