--- a/view/edit.html
+++ b/view/edit.html
@@ -25,7 +25,7 @@
 
                     </div>
                     <div class="padding">
-                        <button type="submit" ng-click="submit(formData)" value="Save" class="button button-block button-calm">Submit</button>
+                        <button type="submit" ng-click="submit(formData)" ng-disabled="" value="Save" class="button button-block button-calm">Submit</button>
                     </div>
                 </form>
 
