--- a/view/form-instance.html
+++ b/view/form-instance.html
@@ -16,7 +16,7 @@
                     <view-field class="item-accordion" data="field" ng-repeat="field in fieldset.field_instances"></view-field>
                 </div>                
                 <div class="padding">
-                    <button class="button button-block button-calm" ng-click="edit()">Edit</button>
+                    <button class="button button-block button-calm" ng-disabled="formData.permission < 2" ng-click="edit()">Edit</button>
                 </div>
             </div>
         </div>
