--- a/view/edit.html
+++ b/view/edit.html
@@ -27,6 +27,9 @@
                     <div class="padding">
                         <button type="submit" ng-click="submit(formData)" ng-disabled="" value="Save" class="button button-block button-calm">Submit</button>
                     </div>
+                    <div class="padding" style="margin-top:-20px">
+                        <button type="submit" ng-click="saveAsNew()" ng-disabled="" value="Save" class="button button-block button-calm">Save as new</button>
+                    </div>
                 </form>
 
             </div>
