--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ textarea {
     background-color: #C1F2FF;
     font-size: 20px;
     font-weight: 500;
-    border-bottom:1px solid #aaa;
+    border-bottom: 1px solid #aaa;
+    height: 50px;
+    padding-top: 15px;
 }
 .form-item{
     background-color: #02296B;
@@ -120,6 +122,7 @@ textarea {
 .all-chevron{
     color: #02296B !important;
     margin-top: 2px;
+    font-size: 10px;
 }
 
 .all-checkbox{
@@ -382,6 +385,12 @@ textarea {
     content:'*';
     color:red;
 }
+.all-reqemail:after{
+    content: '(email)';
+    color: #191919;
+    font-size: 10px;
+    margin-left: 5px;
+}
 .pp-addimg{
     border: 1px solid #E5F4FD;
     margin-left: auto;
@@ -437,4 +446,39 @@ textarea {
 .fixDisplay .pp-icon h2{
     margin-top: 1.3em;
     font-size: 1.1em;
+}
+
+
+.bar-hide .bar-subheader{
+    position: absolute;
+    top:-100px;
+    opacity: 0;
+    /*display: none;*/
+    -webkit-transition:  0.8s ease-in-out;
+    -moz-transition:  0.8s ease-in-out;
+    -ms-transition:  0.8s ease-in-out;
+    -o-transition:  0.8s ease-in-out;
+    -webkit-transform: translateZ(0);
+}
+.bar-hide .scroll-content{
+    top: 0px !important;
+    -webkit-transition:  0.5s ease-in-out;
+    -moz-transition:  0.5s ease-in-out;
+    -ms-transition:  0.5s ease-in-out;
+    -o-transition:  0.5s ease-in-out;
+}
+.bar-helper .scroll-content{
+    -webkit-transition:   0.5s ease-in-out;
+    -moz-transition:   0.5s ease-in-out;
+    -ms-transition:   0.5s ease-in-out;
+    -o-transition:   0.5s ease-in-out;
+}
+.bar-subheader{
+    -webkit-transition:  0.5s ease-in-out;
+    -moz-transition:  0.5s ease-in-out;
+    -ms-transition:  0.5s ease-in-out;
+    -o-transition:  0.5s ease-in-out;
+}
+.has-subheader{
+    top:90px;
 }
