--- a/view/forms.html
+++ b/view/forms.html
@@ -1,6 +1,6 @@
 <ion-view title="Forms" class="all-view-bg"  cache-view="false" ng-class="{'bar-hide': slideHeader, 'bar-helper':slideHeaderHelper}">
     <ion-header-bar class="bar-subheader item-button-left test-item" ui-sref="app.categories({projectId:projectId})">
-        {{categoryName}} - designs
+        {{categoryName}}
         <button class="button button-clear  button-calm" >
             <i class="icon ion-chevron-left all-chevron"></i>
         </button>
