--- a/view/form/_all_edit.html
+++ b/view/form/_all_edit.html
@@ -85,8 +85,9 @@
 <!--signature-->
 <section for="{{hash}}" class="item item-input item-stacked-label signature positive-border" ng-if="data.type == 'signature'" >
     <span class="all-label more-margin" ng-class="{'all-req' : data.required }">{{data.name}}</span>
-    <span class="all-description more-margin">{{data.guidance}}</span>  
-    <img ng-src="{{data.field_values[0].value}}" alt="signature" style="border: 1px solid #D7E0E2">
+    <span class="all-description more-margin">{{data.guidance}}</span>      
+    <img ng-src="{{data.field_values[0].value}}" alt="signature" style="border: 1px solid #D7E0E2;height:200px; padding: 0px calc(50% - 115px);  margin-left: 20px; display: block">
+    <a class="button button-calm button-outline all-button more-margin" ng-click="directiveClick(hash)">{{"Edit signature"}}</a>
 </section>
 
 <!--date-->
