--- a/view/registers.html
+++ b/view/registers.html
@@ -1,5 +1,5 @@
 <ion-view title="Registers" class="all-view-bg" autoscroll='true' cache-view="false" ng-class="{'bar-hide': slideHeader, 'bar-helper':slideHeaderHelper}">
-    <ion-header-bar delegate-handle="small" class="bar-subheader item-button-left test-item" ui-sref="app.categories({projectId:projectId})">
+    <ion-header-bar delegate-handle="small" class="bar-subheader item-button-left test-item" style=" overflow: hidden; white-space: nowrap; text-overflow: ellipsis;" ui-sref="app.categories({projectId:projectId})">
         {{categoryName}} - registers
         <button class="button button-clear  button-calm" >
             <i class="icon ion-chevron-left all-chevron"></i>
