--- a/view/form/_all_edit.html
+++ b/view/form/_all_edit.html
@@ -59,8 +59,8 @@
 <!--check box-->
 <div class="calm-border" ng-if="data.type == 'checkbox'">
     <label class="item item-checkbox all-padding-leftright">
-        <span class="all-label more-margin" ng-class="{'all-req' : data.required }">{{data.name}}</span>        
-        <span class="all-description more-margin" style="margin-right: 30px">{{data.guidance}}</span>   
+        <span class="all-label more-margin" style="width: calc(100% - 70px);" ng-class="{'all-req' : data.required }">{{data.name}}</span>        
+        <span class="all-description more-margin" style="width: calc(100% - 70px);margin-right: 30px">{{data.guidance}}</span>   
         <span class="checkbox all-checkbox">
             <input ng-if="data.field_values[0].value === true" input id="{{hash}}" type="checkbox" name="{{data.name}}" ng-model="data.field_values[0].value" value="1" ng-required="data.required">
             <input ng-if="data.field_values[0].value !== true" input id="{{hash}}" type="checkbox" name="{{data.name}}" ng-model="data.field_values[0].value" value="1" ng-required="data.required">
@@ -74,7 +74,7 @@
         <span class="all-description more-margin">{{data.guidance}}</span>   
     </label>
     <label class="item item-checkbox all-padding-leftright" ng-repeat="box in data.field_values">
-        <span class="all-label" style="margin-right: 30px">{{box.name}}</span>        
+        <span class="all-label" style="width: calc(100% - 40px);display: inline-block;">{{box.name}}</span>        
         <span class="checkbox all-checkbox">
             <input ng-if="box.value === true" input id="{{hash}}" ng-model="box.value" type="checkbox" name="{{data.name}}"  checked ng-required="data.required" >
             <input ng-if="box.value !== true" input id="{{hash}}" ng-model="box.value" type="checkbox" name="{{data.name}}"  ng-required="data.required" >
